--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ particleSystem.prototype.initCFG = function(cfg)
 particleSystem.prototype.initMessage = function()
 {
   // this is the unicode hex of a heart
-  this.str = "2620";
+  this.str = "1F7E9";
   this.fontStr = "400pt Helvetica Arial, sans-serif";
 
   this.ctx.beginPath();
