--- a/index.html
+++ b/index.html
@@ -38,7 +38,9 @@
   
 
   <body>
+    <div class="typewriter">
     <h1 class=typewriter>Ole Jacob<h1/>
+      <div/>
     <canvas id="container"></canvas>
     <script type="text/javascript">
 //Particle
